--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -12,9 +12,30 @@
 			padding-left: 4.16666666667%;
 			padding-right: 4.16666666667%;
 		}
-	}
 	
-	.carousel-destaque--loop-content {
-		background-color: #f1f1f1;
+		.carousel-destaque--loop-content {
+			background-color: #f1f1f1;
+			max-width: 600px;
+			min-height: 275px;
+			padding: 1rem 4.16666666667%;
+			position: absolute;
+			top: 28%;
+			.carousel-destaque--loop-content-title {
+				color: rgb(81, 81, 81);
+				font: {
+					size: 40px;
+					weight: bold;
+				}
+				&:hover {
+					text-decoration: none;
+				}
+			}
+			.carousel-destaque--loop-content-description {
+				font: {
+					size: 18px;
+					weight: 400;
+				}
+			}
+		}
 	}
 }
