--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -1,7 +1,33 @@
 .carousel-destaque {
 	margin-bottom: 100px;
     position: relative;
-
+	.carousel-destaque--control {
+		width: 50px;
+		height: 85px;
+		position: absolute;
+		right: 0;
+		bottom: 65px;
+		z-index: 2;
+		button {
+			width: 40px;
+			height: 40px;
+			font-size: 32px;
+			color: #740d03;
+			cursor: pointer;
+			position: absolute;
+			left: 29%;
+			overflow: hidden;
+			border: none;
+			background: 0 0;
+			transform: translate(-50%,0);
+			&.control__next {
+				top: -97%;
+			}
+			&.control__prev {
+				top: -279%;
+			}
+		}
+	}
 	.carousel-destaque--loop {
 		margin: 0;
 		padding: 0;
@@ -12,6 +38,42 @@
 			padding-left: 4.16666666667%;
 			padding-right: 4.16666666667%;
 		}
+
+		.slick-dots {
+			width: 50px;
+			height: auto;
+			max-height: 256px;
+			padding: 10px 0 30px;
+			display: block!important;
+			position: absolute;
+			right: 0;
+			bottom: 200px;
+			overflow: hidden;
+			li {
+				width: 100%;
+				height: auto;
+				margin: 0;
+				padding: 0 10px;
+				display: block;
+				button {
+					width: 14px;
+					height: 14px;
+					display: block;
+					background-color: #d9d9d9;
+					&:before {
+						content: "";
+					}
+				}
+				&.slick-active {
+					button {
+						background-color: #740d03;
+					}
+				}
+				+ li {
+					margin-top: 10px;
+				}
+			}
+		}
 	
 		.carousel-destaque--loop-content {
 			background-color: #f1f1f1;
@@ -21,7 +83,7 @@
 			position: absolute;
 			top: 28%;
 			.carousel-destaque--loop-content-title {
-				color: rgb(81, 81, 81);
+				color: #333333;
 				font: {
 					size: 40px;
 					weight: bold;
