Fix carousel of collections width

--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -116,6 +116,7 @@ nav.menu-belowheader {
 }
 
 .tainacan-list-post .tainacan-list-collection--container-card {
+	display: block !important;
 	width: 100%;
 	.tainacan-list-collection--card-title {
 		max-width: 186px;
