--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -180,6 +180,14 @@ nav.menu-belowheader {
 	width: 100%;
 	.tainacan-list-collection--card-title {
 		max-width: 186px;
+		@media only screen and (max-width: 576px) {
+			margin-left: 65px;
+		}
+	}
+	.image-placeholder {
+		@media only screen and (max-width: 576px) {
+			margin-right: auto !important;
+		}
 	}
 }
 
