--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -184,6 +184,9 @@ nav.menu-belowheader {
 			margin-left: 65px;
 		}
 	}
+	img.tainacan-list-collection--grid-img {
+		max-width: 170px;
+	}
 	.image-placeholder {
 		@media only screen and (max-width: 576px) {
 			margin-right: auto !important;
