--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -262,10 +262,15 @@ nav.menu-belowheader {
 					max-width: 300px;
 				}
 				.media-body {
-					margin-left: 4.16666666667%;
-					line-height: 1.2;
-					@media only screen and (max-width: 576px) {
-						margin-top: 1rem;
+					p {
+						margin-left: 4.16666666667%;
+						line-height: 1.2;
+						@media only screen and (max-width: 576px) {
+							margin-top: 1rem;
+						}
+						color: #fff;
+						font-size: 1rem;
+    					font-weight: 400;
 					}
 				}
 				margin-bottom: 2rem;
