--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -1,9 +1,212 @@
+/***
+* ACESSIBILIDADE
+***/
+
+/*
+* BARRA DE ACESSIBILIDADE
+*/
+
+.accessibility-bar {
+	width: 100%;
+	position: relative;
+	background-color: #e2e2e2;
+	z-index: 4;
+
+	.container {
+		min-height: 45px;
+		margin: 0 auto;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+		position: relative;
+	}
+}
+.accessibility-shortcuts {
+	margin: 0 -10px;
+	padding: 0;
+	list-style: none;
+	display: flex;
+}
+.accessibility-shortcuts--hidden {
+	position: fixed;
+	top: -50px;
+	left: -50px;
+	opacity: 0;
+	z-index: -2;
+}
+.accessibility-shortcuts {
+	li { margin: 0 5px; }
+
+	a {
+		padding: 15px 10px 15px 25px;
+		font-weight: 400;
+		font-size: 12px;
+		color: #000;
+		line-height: normal;
+		display: block;
+		position: relative;
+
+		span {
+			width: 16px;
+			height: 16px;
+			margin-right: 10px;
+			font-weight: 400;
+			font-size: 12px;
+			color: #fff;
+			line-height: 16px;
+			text-align: center;
+			position: absolute;
+			top: 50%;
+			left: 0;
+			background: #515151;
+			transform: translate(0,-50%);
+		}
+	}
+}
+.accessibility-options { display: none; }
+body {
+	&.js {
+		.accessibility-options {
+			height: 24px;
+			margin-left: -10px;
+			margin-right: -10px;
+			margin-bottom: 0;
+			padding: 0;
+			display: flex;
+			list-style: none;
+		}
+	}
+}
+.accessibility-options {
+	li {
+		height: 24px;
+		margin: 0 10px;
+		display: flex;
+		align-items: center;
+	}
+
+	span {
+		height: 14px;
+		margin-right: 6px;
+		font-weight: 400;
+		font-size: 12px;
+		color: #000;
+		line-height: normal;
+		display: block;
+	}
+
+	button {
+		width: 16px;
+		height: 16px;
+		margin: 0;
+		padding: 0;
+		font-weight: 400;
+		font-size: 11px;
+		color: #fff;
+		line-height: 16px;
+		text-align: center;
+		cursor: pointer;
+		display: block;
+		border: none;
+		background: #515151;
+
+		& + button { margin-left: 6px; }
+	}
+
+	.button-high-contrast {
+		width: 20px;
+		height: 20px;
+		text-indent: -99999px;
+		line-height: 20px;
+		overflow: hidden;
+		position: relative;
+		border-radius: 50%;
+		border: 1px solid #000;
+		background-color: #fff;
+
+		&:after {
+			content: "";
+			width: 10px;
+			height: 20px;
+			display: block;
+			position: absolute;
+			top: 0;
+			left: 0;
+			background-color: #000;
+		}
+	}
+}
+
+@media screen and (min-width: 992px) {
+	.accessibility-bar .container { max-width: 950px; }
+}
+@media screen and (max-width: 800px) {
+	.accessibility-bar .container {
+		padding: 20px;
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-between;
+	}
+	.accessibility-shortcuts {
+		flex-flow: row wrap;
+		justify-content: space-around;
+	}
+	.accessibility-options { margin-top: 20px; }
+	.accessibility-options button {
+		width: 23px;
+		height: 23px;
+		line-height: 23px;
+	}
+}
+
+/* MODO COMPACTO DA BARRA DE ACESSIBILIDADE */
+
+.accessibility-bar.compact-mode {
+	position: absolute;
+	top: 0;
+	border: none;
+	background: none;
+	transform: translate(0,-100px);
+
+	.accessibility-options { display: none; }
+	.accessibility-shortcuts a {
+		padding: 5px 10px;
+		position: absolute;
+		top: 20px;
+		left: 50%;
+		opacity: 0;
+		background-color: #fff;
+		z-index: -2;
+		transform: translate(-50%,100px);
+
+		&:focus {
+			opacity: 1;
+			z-index: 2;
+		}
+	}
+}
+
+@media screen and (max-width: 500px) {
+	.accessibility-bar.compact-mode .accessibility-shortcuts a:focus { transform: translate(-50%,160px); }
+}
+
 .center-absolute {
 	position: absolute;
     margin-left: -50px;
     top: 52%;
     margin-top: -50px;
     overflow: hidden;
+}
+
+
+noscript {
+	margin: 0;
+	padding: 12px 15px;
+	font-size: 18px;
+	color: #fff;
+	text-align: center;
+	display: block;
+	background-color: #740d03;
 }
 
 .carousel-destaque {
@@ -406,5 +609,49 @@ hr.mi-hr {
 @media screen and (min-width: 992px) {
 	nav.menu-belowheader #menubelowHeader>ul>li.menu-item {
 		padding-right: 15px;
+	}
+}
+
+body.contraste {
+	background-color: #000 !important;
+
+	* {
+		color: #fff !important;
+		border-color: #fff !important;
+		background-color: #000 !important;
+	}
+
+	.header h1 img { background-color: #fff !important; }
+
+	.accessibility-options .button-high-contrast { background-color: #fff !important; }
+
+	a { text-decoration: underline !important; }
+	a:visited { color: #740d03 !important; }
+
+	.accessibility-bar { border-bottom: 1px solid #fff !important; }
+
+	img,
+	.accessibility-options button { border: 1px solid #fff !important; }
+
+	.accessibility-shortcuts li,
+	.carousel-schedule .title-1 { background-color: transparent !important; }
+
+	.accessibility-shortcuts a span {
+		color: #000 !important;
+		background-color: #fff !important;
+	}
+
+	.searchform {
+		input[type=submit],
+		button[type=submit] { border: 1px solid #fff !important; }
+	}
+
+	.form-newsletter {
+		button[type=submit],
+		input[type=submit] {
+			border-top: 1px solid #fff !important;
+			border-right: 1px solid #fff !important;
+			border-bottom: 1px solid #fff !important;
+		}
 	}
 }
