--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -254,6 +254,7 @@ noscript {
 			width: 100%;
 			max-height: 450px;
 			display: block;
+			object-fit: cover;
 			padding-left: 4.16666666667%;
 			padding-right: 4.16666666667%;
 			@media only screen and (max-width: 576px) {
