change logo css

--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -672,3 +672,8 @@ body.contraste {
 		box-shadow: none;
 	}
 }
+
+nav.menu-shadow .max-large .tainacan-logo .logo {
+    max-height: 100%;
+    max-width: 100%;
+}
