--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -615,6 +615,96 @@ hr.mi-hr {
 	}
 }
 
+.page-header {
+	align-items: flex-start;
+	.collection-header--share {
+		top: 75%;
+		width: 50px;
+    	height: 50px;
+		.rotater:nth-child(1) {
+			transform: rotate(-28.5deg);
+		}
+	}
+	.ph-title-description {
+		position: absolute;
+		top: -20px;
+		.bg-white-title {
+			background-color: #e2e4e7 !important
+		}
+	}
+	.title-header {
+		&.singular-title {
+			@media only screen and (min-width: 769px) {
+				padding: 1rem;
+				padding-left: 4.166667%;
+			}
+			h1 {
+				font-size: 1.875rem;
+			}
+		}
+	}
+	/* BOX DE PESQUISA */
+
+	.search-box {
+		width: 50px;
+		height: 50px;
+		position: absolute;
+		top: 50%;
+		right: 3.5%;
+		overflow: hidden;
+		border-radius: 27px;
+		background-color: #fff;
+		box-shadow: 0 0 4px rgba(0,0,0,.14), 0 4px 8px rgba(0,0,0,.28);
+		z-index: 2;
+		transition: width 400ms ease-in-out;
+		&.active { width: 353px; }
+		legend {
+			position: absolute;
+			width: 1px;
+			height: 1px;
+			padding: 0;
+			margin: -1px;
+			overflow: hidden;
+			clip: rect(0,0,0,0);
+			border: 0;
+		}
+		input[type=text] {
+			width: 300px;
+			height: 53px;
+			padding: 0 20px;
+			line-height: 53px;
+			position: absolute;
+			top: 0;
+			left: 0;
+			border: none;
+			border-radius: 27px 0 0 27px;
+			background: none;
+		}
+		button[type=submit] {
+			width: 50px;
+    		height: 50px;
+			margin: 0;
+			padding: 0;
+			font-size: 1.5rem;
+			color: #000;
+			text-align: center;
+			line-height: 53px;
+			cursor: pointer;
+			position: absolute;
+			top: 0;
+			right: 0;
+			border-radius: 50%;
+			border: none;
+			background: none;
+			i.mdi{ border-radius: 50%; }
+			&:focus {
+				outline: none;
+			}
+		}
+	}
+	/* BOX DE COMPARTILHAMENTO */
+}
+
 body.contraste {
 	background-color: #000 !important;
 
@@ -678,5 +768,9 @@ nav.menu-shadow {
 	.max-large .tainacan-logo .logo {
 		max-height: 100%;
     	max-width: 100%;
+	}
+	max-height: 75px;
+	.max-large {
+		margin-bottom: 1rem;
 	}
 }
