--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -766,8 +766,8 @@ body.contraste {
 
 nav.menu-shadow {
 	.max-large .tainacan-logo .logo {
-		max-height: 100%;
-    	max-width: 100%;
+		max-height: 80px;
+    	max-width: 300px;
 	}
 	max-height: 75px;
 	.max-large {
