Alinhado banner e barra do brasil de acordo com designer

--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -864,3 +864,8 @@ nav.menu-shadow {
 		margin-bottom: 1rem;
 	}
 }
+
+div#wrapper-barra-brasil {
+    margin: 0 4.16666666667% !important;
+    max-width: 1237px !important;
+}
