Added title in collections items lists

--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -429,6 +429,9 @@ nav.menu-belowheader {
 	&.to-pages {
 		margin-bottom: 85px !important;
 	}
+	&.collections {
+		margin-bottom: 85px !important;
+	}
 	h1 {
 		font-size: 24px;
 		font-weight: 600;
