--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -896,8 +896,8 @@ body.contraste {
 nav.menu-shadow {
 	margin-bottom: 40px;
 	.max-large .tainacan-logo .logo {
-		max-height: 80px;
-		max-width: 300px;
+		max-height: 34px;
+    	max-width: 317px;
 		@media only screen and (max-width: 576px) {
 			max-height: 100%;
 			height: auto;
@@ -912,7 +912,12 @@ nav.menu-shadow {
 
 div#wrapper-barra-brasil {
     margin: 0 4.16666666667% !important;
-    max-width: 1237px !important;
+	width: 100% !important;
+	@media only screen and (min-width: 1800px) {
+		max-width: 1400px;
+		margin-left: auto !important;
+		margin-right: auto !important;
+	}
 }
 
 [aria-label=breadcrumb] {
