--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -333,7 +333,7 @@ noscript {
 			position: absolute;
 			/* top: 28%; */
 			@media only screen and (max-width: 576px) {
-				bottom: 0;
+				bottom: 30px;
 				max-width: 310px;
 				min-height: 222px;
 			}
