add justify align

--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -944,3 +944,7 @@ div#wrapper-barra-brasil {
 	margin-top: 25px !important;
 	margin-bottom: 65px;
 }
+
+.tainacan-single-post article .tainacan-content {
+	text-align: justify;
+}
