Change banner position of background in acervo page

--- a/src/assets/scss/itaipu.scss
+++ b/src/assets/scss/itaipu.scss
@@ -728,8 +728,9 @@ hr.mi-hr {
 		background-position: right top;
     	background-size: 190%;
 	}
-	&.change-position-historico {
+	&.change-position-acervo {
 		background-position: center 80%;
+		background-size: 106% 420px;
 	}
 	&.page-height {
 		height: 420px;
