Alinhando a imagem com o texto do Historico do Museu na home

--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@
 /* CORREÇÕES TEMPORÁRIAS */
 
 .front-page .front-page-historico .media-body .alignleft { float: left; }
-.front-page .front-page-historico .media-body .alignleft img { padding: 4px 33px 0 0; }
+.front-page .front-page-historico .media-body .wp-block-image .alignleft img { padding: 3px 33px 0 0; }
 .page-header.page-height {
 	margin-top: 30px;
 	margin-bottom: 20px;
